--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -74,3 +74,26 @@ a.logo
 
 .site_middle_size
   @include centered_container(750px)
+
+.middle_box
+  width: 560px
+  padding: 20px 90px
+  background-color: #f2f6f9
+  margin: 30px auto
+  -moz-border-radius: 20px
+  -webkit-border-radius: 20px
+  border-radius: 20px
+  border: 1px solid #cadbea
+  overflow: hidden
+
+  h1
+    color: #68879F
+    font-size: 20px
+    font-weight: normal
+    _font-weight: bold
+
+  h2
+    color: #68879F
+    font-size: 14px
+    font-weight: normal
+    _font-weight: bold
