--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -73,3 +73,41 @@
   .error
     line-height: 45px
     color: red
+
+.account
+  .nick_box,
+  .email_box,
+  .password_box
+    width: 500px
+    padding: 5px 0 5px 20px
+    font-size: 20px
+    height: 45px
+    line-height: 45px
+    -moz-border-radius: 8px
+    -webkit-border-radius: 8px
+    border-radius: 8px
+    border: 1px solid #cadbea
+    background: #fff
+
+    input
+      border: 0
+      height: 40px
+      line-height: 40px
+      font-size: 20px
+      width: 360px
+
+  .error
+    line-height: 45px
+    color: red
+
+  label
+    color: gray
+
+  .submit_box input
+    display: block
+    margin: auto
+    width: 150px
+    height: 44px
+    border: 0px
+    cursor: pointer
+    background: url('/images/post_save.gif')
