--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -8,25 +8,25 @@
     = f.label :name, '用户名'
     = f.text_field :name
   .error<
-    = flash[:name_error]
     &nbsp;
+    = @user.errors[:name].first
   .email_box<
     = f.label :email, '邮箱'
     = f.text_field :email
   .error<
-    = flash[:email_error]
     &nbsp;
+    = @user.errors[:email].first
   .password_box<
     = f.label :password, '密码'
     = f.password_field :password
   .error<
-    = flash[:password_error]
     &nbsp;
+    = @user.errors[:password].first
   .password_box<
     = f.label :password_confirmation, '确认密码'
     = f.password_field :password_confirmation
   .error<
-    = flash[:password_confirmation_error]
     &nbsp;
+    = @user.errors[:password_confirmation].first
   .submit_box<
     = f.submit " "
