--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,31 +1,31 @@
 - @sub_title = "你的朋友#{@inv_user.name}宽街小分队邀请你参与测试"
 - @sub_title_class = "register_title"
 
-= form_for(@user, :url => sessions_path, :html => {:class => 'register'}) do |f|
+= form_for(@user, :url => users_path, :html => {:class => 'register'}) do |f|
   .nick_box<
     = f.label :name, '用户名'
     = f.text_field :name
   .error<
-    = flash[:name_error]
     &nbsp;
+    = @user.errors[:name].first
   .email_box<
     = f.label :email, '邮箱'
     = f.text_field :email
   .error<
-    = flash[:email_error]
     &nbsp;
+    = @user.errors[:email].first
   .password_box<
     = f.label :password, '密码'
     = f.password_field :password
   .error<
-    = flash[:password_error]
     &nbsp;
+    = @user.errors[:password].first
   .password_box<
     = f.label :password_confirmation, '确认密码'
     = f.password_field :password_confirmation
   .error<
-    = flash[:password_confirmation_error]
     &nbsp;
+    = @user.errors[:password_confirmation].first
   = hidden_field_tag 'code', @inv_user.inv_code
   .submit_box<
     = f.submit " "
