--- a/doc/raw_html/mooeditable.css
+++ b/doc/raw_html/mooeditable.css
@@ -237,7 +237,21 @@
 	border-radius: 3px;
 }
 
+/*jerry add*/
+.mooeditable-container{
+	border:0px;
+	-moz-border-radius:8px;
+	-webkit-border-radius:8px;
+	border-radius:8px;
+}
 
+.mooeditable-ui-toolbar
+{
+	-moz-border-radius:8px 8px 0px 0px;
+	-webkit-border-radius:8px 8px 0px 0px;
+	border-radius:8px 8px 0px 0px;
+	background:#eee;
+}
 
 /* forecolor */
 .mooeditable-ui-toolbar .forecolor-item .button-icon{
@@ -287,3 +301,10 @@
 
 .mooeditable-ui-toolbar .removeformat-item .button-icon { background: transparent url(images/mooeditable/removeformat.png) no-repeat center center; }
 .mooeditable-ui-toolbar .insertHorizontalRule-item .button-icon { background: transparent url(images/mooeditable/hr.png) no-repeat center center; }
+
+
+
+
+
+
+
