Prefer to store user-provided content

--- a/app/views/posts/_form_video.html.haml
+++ b/app/views/posts/_form_video.html.haml
@@ -10,5 +10,4 @@
       支持优酷、酷6、土豆视频网站的视频播放页链接，其他网站视频请输入Flash地址或HTML代码 
     %a.rich_editor_starter.slight{href: "#"}+添加描述
   .text
-    =text_area_tag :content
-
+    =text_area_tag :content, post.content
