--- a/app/views/posts/_post.html.haml
+++ b/app/views/posts/_post.html.haml
@@ -1,5 +1,5 @@
 - js 'post_display'
-%div[post]{:class => type}
+%div[post]{:class => post.type}
   .content_body
     = render partial: sub_template, object: post
   .content_footer
