--- a/app/views/posts/_form_text.html.haml
+++ b/app/views/posts/_form_text.html.haml
@@ -1,14 +1,12 @@
 - @post_type = capture do
   文字
-
 - content_for :form do
   .option_text
-    %a.new_title_starter.slight{href: "#"}
+    %a.new_title_starter.slight{href: "#"}<
       +新建标题
-    %a.rich_editor_starter.slight{href: "#"}
-      启用富文本编辑器
+    = content_for :content_toggle
+
   .title_text{ style: "display:none;" }
     = label_tag :title, "标题(可选)"
     = text_field_tag :title, post.title
-  .text
-    = text_area_tag :content, post.content
+  = content_for :content_area
