--- a/app/views/posts/_form_video.html.haml
+++ b/app/views/posts/_form_video.html.haml
@@ -8,7 +8,5 @@
   .option_text
     %span.slight
       支持优酷、酷6、土豆视频网站的视频播放页链接，其他网站视频请输入Flash地址或HTML代码 
-    %a.rich_editor_starter.slight{href: "#"}+添加描述
-  .text
-    =text_area_tag :content
-
+    = content_for :content_toggle
+  = content_for :content_area
