--- a/public/stylesheets/lib.sass
+++ b/public/stylesheets/lib.sass
@@ -24,6 +24,10 @@ $slide-button-size: 18px
   width: $width
   height: $height
 
+@mixin single_line($height)
+  height: $height
+  line-height: $height
+
 @mixin hide_text
   text-indent: -9999px
 
