fix textarea css

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -151,6 +151,9 @@
     background: white
     margin-bottom: 30px
 
+  div.rich_text
+    padding: 0px
+
   .title_text input,
   .url_link input,
   .title_link input
