--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -59,7 +59,7 @@
     .head
       .head_avatar<
         %a{href: fucking_url_for(@user.primary_blog)}<
-          %img{src: "/images/test002.jpg"}
+          =image_tag @user.primary_blog.icon.url_for(:medium)
       .post_area
         .left
         .text
@@ -73,7 +73,7 @@
           .avatar
             .image<
               %a{href: fucking_url_for(p.blog)}<
-                %img{src: "/images/test002.jpg"}
+                =image_tag p.blog.icon.url_for(:medium)
             %div<
               %a.page_name{href: fucking_url_for(p.blog)}= p.blog.title
           .content= render_post p
