finish video display

--- a/app/views/posts/_video.html.haml
+++ b/app/views/posts/_video.html.haml
@@ -1,10 +1,10 @@
-.video_closed
+.video_thumb{ :style => (!!@default_open ? "display:none" : "") }
   %a.video_tar_open{ :href => video.player }       
     %img{ :src => video.thumb }     
-  %img                              
-.video_opened
+    %img.video_thumb_play{ :src => image_video_thumb_play }
+.video_full{ :style => (!@default_open ? "display:none" : "") }
   %span
-    %a.video_tar_close<
+    %a.video_tar_close{ :href => "#" }<
       收起
   %span
     来自: 
