--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,9 @@
 - content_for :head do
   = stylesheet_link_tag 'post_display', 'dashboard'
+  :javascript
+    document.addEvent('domready', function(){
+      K.posts.init()
+    });
 
 - flash.each do |k, v|
   %div{:class => "flash_users_#{k}"}= v
