finish video display

--- a/app/views/posts/_video.html.haml
+++ b/app/views/posts/_video.html.haml
@@ -1,14 +1,18 @@
 .video_thumb{ :style => (!!@default_open ? "display:none" : "") }
   %a.video_tar_open{ :href => video.player }       
     %img{ :src => video.thumb }     
-    %img.video_thumb_play{ :src => image_video_thumb_play }
+    .video_thumb_play<
+      &nbsp;
 .video_full{ :style => (!@default_open ? "display:none" : "") }
   %span
     %a.video_tar_close{ :href => "#" }<
       收起
-  %span
-    来自: 
-    %a{ :href => video.url }<
-      = video.site
+  - unless video.site.nil?
+    %span                        
+      来自:                      
+      %a{ :href => video.url }<  
+        = video.site             
   .video_player  
+%p<
+  = video.content
    
