--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -163,6 +163,8 @@
   heigh: 96px
   position: relative
 
+.video_tar_open
+
 .video_thumb_play
   cursor: pointer
   position: absolute
@@ -170,6 +172,6 @@
   left: 50%
   margin: -16.5px 0 0 -16.5px
   width: 33px
-  heidht: 33px
+  height: 33px
   opacity: 0.8
   background: transparent url(/images/post_video_play.gif) no-repeat
