--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -7,8 +7,8 @@
 
 @mixin post_area_button
   width: 125px
-  background-color: #65b7fc
-  cursor: pointer
+  display: block
+  background: url('/images/dash_.gif') no-repeat
 
 a.page_name
   color: #f93
@@ -67,7 +67,7 @@ a.page_name
 
   .icon_posts
     @include dashboard_sidebar_button
-    background: url('images/icons.gif') -98px 0px
+    background: url('/images/icons.gif') -98px 0px
 
   .icon_followed
     @include dashboard_sidebar_button
@@ -133,34 +133,36 @@ a.page_name
 
   .post_area
     margin-left: 72px
+    background-color: #65b7fc
 
-    div
+    div, a
       height: 100px
       float: left
 
     .left
+      @include post_area_button
       width: 66px
-      background: url('/images/dash_left.png')
 
     .text
       @include post_area_button
-      background-image: url('/images/dash_text.png')
+      background-position: -66px
 
     .picture
       @include post_area_button
-      background-image: url('/images/dash_picture.png')
+      background-position: -191px
 
     .link
       @include post_area_button
-      background-image: url('/images/dash_link.png')
+      background-position: -316px
 
     .video
       @include post_area_button
-      background-image: url('/images/dash_video.png')
+      background-position: -441px
 
     .right
+      @include post_area_button
       width: 51px
-      background: url('/images/dash_right.png')
+      background-position: -566px
 
   .timeline
     padding-top: 30px
