--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -5,21 +5,17 @@
 
 = form_t params, do
   = hidden_field_tag :type, @post.type
-  - if not @post.author
+  - if @post.new_record?
     = hidden_field_tag 'author_id', @user.id
 
   = content_for :form
   .operation
     .page_selector
       .my_pages
-        - if @post.blog
+        - if @post.new_record?
           %p
-            发布至:
-            = @post.blog.title
-        - else
-          %p
-            发布至:
-            %select{name: 'blog_id', id: 'blog_id'}
+            -# 发布至:
+            %select#blog_id{name: 'blog_id', data: {widget: 'prettySelect'}}
               - @target_blogs.each do |b|
                 %option{value: b.id}
                   = b.title
