--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -7,7 +7,7 @@
     = yield
   .footer
 
-  - content_for :title, (@action + @post_type + "_宽岛")
+  - content_for :title, (@action + @post_type.strip + "_宽岛")
 
 - content_for :head, do
   = stylesheet_link_tag "post_edit", "mooeditable"
