--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -193,7 +193,16 @@
     button
       background: none
       border: 0
+      height: 100%
+      width: 100%
+      cursor: pointer
       @include hide_text
+
+  .post_error
+    font-size: 12px
+    color: red
+    font-weight: blod
+    padding-left: 10px
 
 .my_pages
   $selector-width = 186px
