fix pics form, change DOCTYPE

--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -128,7 +128,7 @@ a.page_name
     @include size(60px, 60px)
     border: 1px solid gray
     float: left
-    background: url('/images/avatar.jpg')
+    background: url('/images/default_blog_icon.jpg')
 
 
   .post_area
@@ -244,7 +244,7 @@ a.page_name
       @include size(60px, 60px)
       border: 1px solid gray
       margin-bottom: 5px
-      background: url('/images/avatar.jpg')
+      background: url('/images/default_blog_icon.jpg')
 
   .content
     margin-left: 86px
