--- a/app/views/posts/_form_photo.html.haml
+++ b/app/views/posts/_form_photo.html.haml
@@ -8,8 +8,8 @@
       %img{ :name => "tar_img", :src => (form_photo.nil? ? "" : form_photo.image.url_for(:small)), :alt => '' }
   %div{ :class => "the_text" }<
     = text_field_tag "photos[][desc]", form_photo.nil? ? "" : form_photo.desc
-  - if form_photo.nil?
-    %span{ :name => "tar_process" }
-      上传中...
+    - if form_photo.nil?
+      %span{ :name => "tar_process" }<
+        上传中...
   %div{ :class => "the_close", :alt => "删除" }<
     &nbsp;
