Adjust font-size for page selector

--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -209,6 +209,9 @@
   $selector-padding = 10px
   $selector-inner = $selector-width - 2 * $selector-padding
 
+  select
+    font-size: 18px
+
   a
     text-decoration: none
     color: $light-gray
