--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -8,7 +8,8 @@
       图片格式支持JPEG，GIF，PNG，最大4MB。
   #box_url{ :class => 'url_image', :style => 'display:none;' }
     %input{ :type => 'text', :id => 'url_uploader_url', :alt => 'http://' }
-    %span{ :id => 'url_uploader_btn', :value => '提交链接' }
+    %span{ :id => 'url_uploader_btn', :alt => '提交链接' }<
+      &nbsp;
   %input{ :id => 'photo_template', :value => render_form_photo(nil), :type => 'hidden' }
   #photos_list
     - post.photos.each do |p|
