--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -58,8 +58,7 @@
     margin-bottom: 30px
 
   .url_image
-
-    .span
+    span
       display:  inline-block
       width: 130px
       background: url('/images/post_image_url.gif') no-repeat
@@ -68,7 +67,7 @@
       margin-top: 9px
       vertical-align: top
 
-    .input
+    input
       border: 0
       height: 40px
       line-height: 40px
