--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -288,11 +288,12 @@ a.page_name
     padding: 0px 50px
     font-size: 14px
 
-.page_control 
-  margin-left: 413px
+.page_control
+  float: right
+  width: 276px
+  margin-right: 11px
 
-  a, .page_control .page_number
-    display: block
+  a, .page_number
     float: left
     text-decoration: none
 
