--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -81,7 +81,6 @@ a.page_name
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') -70px 0px
 
-
   .icon_post
     @include dashboard_sidebar_button
     background: url('/images/icons.gif') -98px 0px
@@ -108,12 +107,10 @@ a.page_name
       margin-left: -18px
       margin-bottom: 16px
 
-
     .create_page
       margin-bottom: 2px
       margin-top: 5px
       font-size: 12px
-
 
   .main
     width: 700px
@@ -166,6 +163,12 @@ a.page_name
 
   .timeline
     padding-top: 30px
+
+.real_fucking_following
+  visibility: hidden
+
+.hover .real_fucking_following
+  visibility: visible
 
 .my_pages
   position: relative
