Fix styles for error message

--- a/public/stylesheets/user.sass
+++ b/public/stylesheets/user.sass
@@ -73,6 +73,7 @@
   .error
     line-height: 45px
     color: red
+    padding-left: 8px
 
 .account
   .nick_box,
@@ -99,6 +100,7 @@
   .error
     line-height: 45px
     color: red
+    line-height: 45px
 
   label
     color: gray
